--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creating and Inserting DOM Elements</title>
   </head>
   <script type="application/javascript">
+    const main = document.getElementById('main');
+    if (main) {
+      main.remove();
+    }
+    const newHeader = document.createElement('h1');
+    newHeader.id = 'victory';
+    newHeader.textContent = 'YOUR-NAME is the champion';
+    document.body.appendChild(newHeader);
   </script>
   <body>
     <main id="main"></main>
